# lore

./: .loreignore  .markdownlint-cli2.jsonc  .pre-commit-clippy.py  .pre-commit-config.yaml  .rustfmt.toml  .vale.ini  CODE_OF_CONDUCT.md  Cargo.toml  SECURITY.md  build-helper.rs  clippy.toml  deny.toml  mkdocs.yml  pyproject.toml  pyrightconfig.json
.cargo/: config.toml
docs/how-to/: README.md  deploy-local-lore-server.md  how-to-template.md  install-lore-cli.md
docs/reference/: README.md  lore-cli-commands.md  lore-cli-config.md  lore-server-config.md
docs/tutorials/: README.md  quickstart.md
lore/: Cargo.toml  build.rs  cbindgen.toml
lore-aws/: Cargo.toml  README.md
lore-aws/src/: aws_error.rs  clients.rs  dynamodb.rs  lib.rs  s3.rs
lore-aws/src/dynamodb/: cancellation_reason.rs  query_output_accumulation.rs
lore-aws/src/store/: immutable_store.rs  lock_store.rs  mod.rs  mutable_store.rs
lore-aws/src/telemetry/: aws.rs  mod.rs
lore-base/: Cargo.toml  build.rs
lore-base/src/: directories.rs  error.rs  lib.rs  runtime.rs  version.rs
lore-base/tests/: growvec.rs
lore-capi/: lore.h
lore-chaos-client/: Cargo.toml  README.md
lore-chaos-client/src/: chaos.rs  chaos_main.rs  cli.rs  lib.rs  lore.rs  main.rs  operations.rs  parallel.rs  probability.rs  tracing.rs
lore-chaos-client/src/chaos/: config.rs  files.rs  operation_context.rs  performer.rs  picker.rs  runner.rs
lore-chaos-client/src/lore/: interface.rs  state.rs
lore-chaos-client/src/operations/: writer.rs
lore-chaos-client/src/parallel/: config.rs  runner.rs
lore-chaos-client/src/probability/: weighting.rs
lore-client/: Cargo.toml  build.rs  clippy.toml
lore-credential/: Cargo.toml
lore-credential/src/: jwt.rs  lib.rs  token_store.rs  util.rs
lore-error-set/: Cargo.toml
lore-error-set-macro/: Cargo.toml
lore-error-set-macro/src/: codegen.rs  derive_ffi.rs  lib.rs
lore-error-set/src/: ext.rs  ffi.rs  internal.rs  lib.rs  location.rs  set.rs  traced.rs
lore-error-set/tests/: compile_fail.rs  ergonomics.rs  error_sets.rs  features.rs  ffi.rs  filter.rs  forward.rs  forward_strict.rs  interop.rs  map_matched_err.rs  mapping.rs  matched.rs  traced_internal.rs  tracing.rs  wrap_internal.rs
lore-error-set/tests/compile_fail/: context_required.rs  context_required.stderr  ffi_derive_missing_attr.rs  ffi_derive_missing_attr.stderr  forward_strict_missing_variant.rs  forward_strict_missing_variant.stderr  missing_ffi_error.rs  missing_ffi_error.stderr
lore-error-set/wip/: ffi_derive_missing_attr.stderr
lore-hashicorp/: Cargo.toml
lore-hashicorp/src/: consul.rs  lib.rs
lore-hashicorp/src/consul/: README.md  client.rs  factory.rs  service_peer_discovery.rs
lore-hashicorp/src/telemetry/: mod.rs  nomad.rs
lore-macro/: Cargo.toml
lore-macro/src/: lib.rs  lore_args.rs  lore_command.rs  lore_instrument.rs  variant.rs
lore-notification/: Cargo.toml
lore-notification/src/: client.rs  lib.rs
lore-proto/: Cargo.toml  README.md  build.rs  package.json
lore-proto/proto/: admin.proto  auth_api.proto  epic_events.proto  lock.proto  lore_notification.proto  model.proto  notification.proto  rebac_api.proto  replication.proto
lore-proto/proto/lore/environment/v1/: environment.proto
lore-proto/proto/lore/model/v1/: model.proto
lore-proto/proto/lore/repository/v1/: repository.proto
lore-proto/proto/lore/revision/v1/: revision.proto
lore-proto/proto/lore/storage/v1/: storage.proto
lore-proto/proto/lore/thin_client/v1/: model.proto  thin_client.proto
lore-proto/src/: convert.rs  lib.rs
lore-proto/src/epic/: mod.rs
lore-proto/src/grpc/: epic.events.rs  epic_urc.rs  lore.environment.v1.rs  lore.model.v1.rs  lore.notification.rs  lore.repository.v1.rs  lore.revision.v1.rs  lore.storage.v1.rs  lore.thin_client.v1.rs  ucs.auth.rs  urc.lock.rs  urc.model.rs  urc.notification.rs  urc.rpc.rs
lore-proto/src/lore/: mod.rs
lore-proto/src/lore/environment/: mod.rs
lore-proto/src/lore/environment/v1/: mod.rs
lore-proto/src/lore/model/v1/: mod.rs
lore-proto/src/lore/repository/v1/: mod.rs
lore-proto/src/lore/revision/v1/: mod.rs
lore-proto/src/lore/storage/v1/: mod.rs
lore-proto/src/lore/thin_client/v1/: mod.rs
lore-proto/src/urc/: mod.rs
lore-proto/tests/: v1_lint.rs  v1_model.rs  v1_repository.rs  v1_revision.rs  v1_thin_client.rs
lore-revision/: Cargo.toml  Dockerfile  README-PROTOCOLS.md  clippy.toml
lore-revision/src/: anchor.rs  auth.rs  branch.rs  change.rs  cluster.rs  commit.rs  diff.rs  environment.rs  error.rs  event.rs  file.rs  filter.rs  find.rs  fragment.rs  global.rs  hash.rs  history.rs  immutable.rs  infer.rs  instance.rs  interface.rs  layer.rs  lib.rs  link.rs  lock.rs  logging.rs  lore.rs  merge.rs  merge_carry.rs  metadata.rs  nametable.rs  node.rs  notification.rs  path.rs  progress.rs  projfs.rs  proto.rs  protocol.rs  relay.rs  repository.rs  (+9 more)
lore-revision/tests/: auth.rs  auth_exchange.rs  change.rs  clone.rs  commit.rs  compile_fail.rs  composite_store.rs  dependency.rs  dirty.rs  errors.rs  filesystem.rs  filter.rs  fragment.rs  hash.rs  helper.rs  immutable.rs  immutablestore.rs  in_memory_store.rs  inflight.rs  (+24 more)
lore-server/: Cargo.toml  DOCKER.md  Dockerfile  README.md  build.rs  clippy.toml
lore-storage/: Cargo.toml  build.rs
lore-storage/src/: compress.rs  concurrency.rs  defragment.rs  error.rs  errors.rs  fragment_engine.rs  fragment_flags.rs  fs_util.rs  growvec.rs  hash.rs  immutable_store.rs  lib.rs  maintenance.rs  mutable_store.rs  options.rs  packstore.rs  read.rs  store_types.rs  test_util.rs  typed_bytes.rs  types.rs  write.rs  write_tracker.rs
lore-storage/src/compress/: pool.rs
lore-storage/src/local/: fan_out.rs  immutable_store.rs  mod.rs  mutable_store.rs
lore-telemetry/: Cargo.toml
lore-telemetry/src/: config.rs  drop_record.rs  drop_time.rs  error.rs  execution_state.rs  lib.rs  observe.rs  timer.rs  tracing.rs
lore-telemetry/src/metrics/: grpc_metrics.rs  grpc_tower_layer.rs  http_metrics.rs  http_tower_layer.rs  mod.rs
lore-transport/: Cargo.toml
scripts/: install.ps1  install.sh
(+531 files in other folders)
