[package]
name = "lore-credential"
edition = "2024"
version.workspace = true
publish = false

[lib]
name = "lore_credential"

[dependencies]
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
keyring = { workspace = true }
lore-base = { workspace = true }
lore-error-set = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
zerocopy = { workspace = true }

[features]
trace_log = ["lore-base/trace_log"]
