[package]
name = "lore-hashicorp"
edition = "2024"
version.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
rand = { workspace = true }
rs-consul = "0.13.0"
tokio = { workspace = true }
tracing = { workspace = true }
lore-revision = { workspace = true }
lore-telemetry = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
lore-base = { workspace = true }
mockall = { workspace = true }
rand = { workspace = true }
temp-env = { workspace = true }
uuid = { workspace = true }
