[package]
name = "lore-notification"
edition = "2024"
version.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
lore-base = { workspace = true }
lore-storage = { workspace = true }
lore-revision = { workspace = true }
lore-transport = { workspace = true }
lore-error-set = { workspace = true }
lore-proto = { workspace = true }
